--- a/week2 Bootstrap homework/main.css
+++ b/week2 Bootstrap homework/main.css
@@ -4,23 +4,11 @@ body {
     font-family: Acme;
 }
 
-#wrapper {
-    background-color: #002200;
-    max-width:100%;
-    margin: auto;
-}
-
-header {
-    background-color: #eff1b9;
-    height: 150px;
-    border-bottom: 1px solid #cccccc;
-}
-
 h1 {
-    padding-top: 30px;
+    padding-top: 20px;
     text-align: center;
-    font-size: 3em;
-    color: #330000;
+    font-size: 2em;
+    color: #fff000;
 }
 
 main {
@@ -28,9 +16,8 @@ main {
     display: block;
 }
 
-
 img {
-    margin:10px;
+    margin:20px;
     padding-left: 10px;
     padding-right: 10px;
     padding-top: 10px;
@@ -50,66 +37,85 @@ img {
 .surp {
     margin: 0 auto;
     text-align: center;
-    margin-top: 20px;
+    margin: 20px;
 }
 
-.contact,
-.art {
+.contact {
     display: inline-block;
     width: 80%;
     vertical-align: top;
-    margin-left: 50px;
+    margin: 0 auto;
 }
 
 .info {
     display: inline-block;
     width: 44%;
-    margin-left: 10px;
+    margin: auto;
 }
 
 form {
     padding: .2em;
+    margin: auto;
 }
 
-
 @media(min-width:320px) {
-    #wrapper {
-        display: flex;
-        flex-direction: column;
-        width: auto;
+   
+    .contact {
+        display:flex;
+        flex-direction:column;
     }
 
-    picture {
-        width: 60%;
+    img {
+        width: 180px; 
+        margin: auto;
         box-sizing: border-box;
     }
 
     .learn {
         width: 60%;
-        margin: auto;
+        margin: 0 auto;
     }
-
 }
 
 @media(min-width:768px) {
-    picture {
-        width: 50%;
+   
+    img {
+        width: 250px; 
+        margin:20px 20px 20px 20px;
     }
 
     .learn {
         width: 60%;
-    }
-
-
-}
-
-@media(min-width:960px) {
-    #wrapper {
-        display: inline-block;
         margin: 0 auto;
     }
 
-    .learn {
-        width: 80%;
+    .art {
+        width: 200px;
+        margin: 0 auto;
     }
 }
+
+@media(min-width:992px) {
+    
+    .contact {
+        display:flex;
+        flex-direction:row;
+        align-items: center;
+        justify-content:center;       
+    }
+
+    img {
+        width: 350px; 
+        margin:20px 20px 20px 20px;
+    }
+
+    .learn {
+        width: 60%;
+        margin: 0 auto;
+    }
+
+    .art {
+        width: 200px;
+    }
+}
+
