--- a/week4cardgridhw/main.css
+++ b/week4cardgridhw/main.css
@@ -25,8 +25,9 @@ section.jumbotron {
     
 .card{
     padding:0;
-margin:1rem;
-max-width: 250px;
+margin:.25rem;
+min-width:200px;
+max-width:225px;
 
 
 }
