--- a/week5formshw/main.css
+++ b/week5formshw/main.css
@@ -1,11 +1,42 @@
-img{max-width:250px;max-height:250px;}
-
-.hideit {
-    margin: 0 auto;
-    text-align: center;
-
+body {
+    padding-top:20px;
 }
 
-#hid{display:none;}
+header {
+    margin:15vh;
+}
+h1 {
+    margin:20px;
+    text-align:center;
+}
 
+
+img {
+    max-width:250px;
+    max-height:250px;
+    margin: 10px;
+}
+
+main {
+    padding-bottom: 10px;
+}
+
+p {
+    width: 60%;
+    margin: 0 auto;
+}
+
+.hideit {
+    margin: 20px;
+    text-align: center;
+}
+
+#hid{
+    display:none;
+}
+
+.submitit {
+    text-align:center;
+    margin: 10px;
+}
 
