--- a/week9trans/main.css
+++ b/week9trans/main.css
@@ -1,27 +1,111 @@
 body {
-    background-color: green;
-    height: 80vh;
+    margin:0 auto;
+    background-image: linear-gradient(rgba(255, 255, 255, 0.641),grey);    
 }
 main {
-    background-color:salmon;
+    max-width:100%;
+}
+header {
+    background-image: linear-gradient(to right, rgba(179, 189, 205, 0.504), rgb(127, 127, 127));
+    height:100px;
+    margin-bottom:20px;
+}
+ul {
+    margin:2px;
+}
+ul li {
+    list-style: none;
+    display: inline;
 }
 
-.card-body {
-    background-color: yellow;
-    font-family: 'Work Sans', sans-serif;
-}
+nav a {
+    display: inline-block;
+    vertical-align:center;
+    margin-right:20px;
+    height:60px;
+    line-height:90px;
+    text-transform: uppercase;
+    text-decoration: none;
+    color: #000;
+    border-bottom: 1px solid rgb(128, 128, 128, 1);
+    transition: color 500ms, white 500ms;
+    transition: border-bottom-color 600ms, white 600ms;
 
-.card-img-top{
-    height:60vh;
 }
-
-.card-title {
-    color: black;
+nav a:hover {
+    color: white;
+    border-bottom-color: white;
 }
-
 .creed {
-    max-width:80px;
-    max-height:80px;
+    width:40px; 
+    height:40px;
+    float:left;
+    margin-left:10px;
+    margin-right:20px;
+    margin-top:20px;
+}
+.ship img:hover{
+    transition: transform 1s;
+    transform:translate(-8px,-8px);
+}
+.ship img:active{
+    transform:rotate(187deg);
+}   
+
+.creed.selected{
+    transform:rotate(18deg);
+}
+.ship {
+    text-align:center;
+    margin:0;
 }
 
-header {height:150px;margin-bottom:50px;}
+@media (min-width: 320px) {
+div img {
+    max-width:260px;
+    max-height:260px;
+    margin:5px;
+}
+nav a{ 
+    font-size: 16px;
+}
+div img{
+    transform: rotate(.5deg);
+}
+}
+
+@media (min-width:768px){
+div {
+    height:300px;
+}
+div img {
+    max-width:225px;
+    height:100%;
+    margin:10px;
+}
+ul li {
+    padding: 5px;
+}
+div img{
+    transform: rotate(3deg);
+}
+nav a{
+     font-size: 30px;
+}
+}
+
+@media(min-width:980px){
+div img {
+    max-width:300px;
+    height:100%;
+}
+ul li {
+    padding: 5px;
+}
+nav a{ 
+    font-size: 30px;
+}
+div img{
+    transform: rotate(7deg);
+}
+}
