--- a/weekbrief/main.css
+++ b/weekbrief/main.css
@@ -4,3 +4,66 @@ body {font-family: 'Great Vibes', cursive;
 
 .btn-now{display:inline-block;}
 
+.flip-container {
+    perspective: 1000px;
+  
+}
+	/* flip the pane when hovered */
+	.flip-container:hover .flipper, .flip-container.hover .flipper, .flip-container.flip .flipper {
+        transform: rotateY(180deg);
+    }
+.flip-container, .front, .back ,.card{
+	
+	height:480px;
+}
+
+/* flip speed goes here */
+.flipper {
+	transition: 0.6s;
+	transform-style: preserve-3d;
+
+	position: relative;
+}
+
+/* hide back of pane during swap */
+.front, .back {
+	backface-visibility: hidden;
+
+	position: absolute;
+	top: 0;
+	left: 0;
+}
+
+/* front pane, placed above back */
+.front {
+	z-index: 2;
+	/* for firefox 31 */
+	transform: rotateY(0deg);
+}
+
+/* back, initially hidden pane */
+.back {
+    transform: rotateY(180deg);
+    margin:20px;
+}
+
+
+
+@media (min-width:320px){
+div {display:block;}
+}
+
+@media (min-width:768px){
+
+       
+
+}
+
+
+@media(min-width:980px){
+
+.flip-container, .front, .back, .card  {
+	
+	height: 480px;
+}
+}
